exports[`createValintaperuste > should be able to create valintaperuste #0`] =
{
  "hakutapaKoodiUri": "hakutapa_0#1",
  "kielivalinta": [
    "fi"
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_0#1",
  "koulutustyyppi": "yo",
  "metadata": {
    "kielitaitovaatimukset": [],
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "osaamistaustaKoodiUrit": [],
    "tyyppi": "yo",
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus</p>"
    },
    "valintatavat": [
      {
        "enimmaispisteet": 100,
        "kaytaMuuntotaulukkoa": false,
        "kuvaus": {},
        "kynnysehto": {
          "fi": "Kynnysehto"
        },
        "nimi": {
          "fi": "Valintatavan nimi"
        },
        "sisalto": [
          {
            "data": {
              "fi": "<p>Sisältötekstiä</p>"
            },
            "tyyppi": "teksti"
          },
          {
            "data": {
              "rows": [
                {
                  "columns": [
                    {
                      "index": 0,
                      "text": {
                        "fi": "solu1.1"
                      }
                    },
                    {
                      "index": 1,
                      "text": {
                        "fi": "solu1.2"
                      }
                    }
                  ],
                  "index": 0
                },
                {
                  "columns": [
                    {
                      "index": 0,
                      "text": {
                        "fi": "solu2.1"
                      }
                    },
                    {
                      "index": 1,
                      "text": {
                        "fi": "solu2.2"
                      }
                    }
                  ],
                  "index": 1
                }
              ]
            },
            "tyyppi": "taulukko"
          }
        ],
        "vahimmaispisteet": 10,
        "valintatapaKoodiUri": "valintatapajono_0#1"
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Valintaperusteen nimi"
  },
  "onkoJulkinen": true,
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tila": "julkaistu",
  "valintakokeet": [
    {
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>ohjeet ennakkovalmistautumiseen</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>ohjeet erityisjärjestelyihin</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa hakijalle</p>"
        }
      },
      "nimi": {
        "fi": "nimi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-02T10:45",
            "paattyy": "2019-04-02T19:00"
          },
          "jarjestamispaikka": {
            "fi": "paikka"
          },
          "lisatietoja": {
            "fi": "lisatietoja"
          },
          "osoite": {
            "osoite": {
              "fi": "osoite"
            },
            "postinumeroKoodiUri": "posti_0#2"
          }
        }
      ],
      "tyyppiKoodiUri": "valintakokeentyyppi_1#1"
    }
  ]
};

exports[`editValintaperuste > should be able to edit valintaperuste #0`] =
{
  "hakutapaKoodiUri": "hakutapa_0#1",
  "id": "649adb37-cd4d-4846-91a9-84b58b90f928",
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_0#1",
  "koulutustyyppi": "amm",
  "metadata": {
    "kielitaitovaatimukset": [],
    "kuvaus": {
      "fi": "<p>Loppukuvaus</p>"
    },
    "osaamistaustaKoodiUrit": [],
    "tyyppi": "amm",
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus - fi</p>"
    },
    "valintatavat": [
      {
        "enimmaispisteet": 100,
        "kaytaMuuntotaulukkoa": false,
        "kuvaus": {},
        "kynnysehto": {
          "fi": "Kynnysehto"
        },
        "nimi": {
          "fi": "Valintatavan nimi"
        },
        "sisalto": [
          {
            "data": {
              "fi": "<p>Tekstia</p>"
            },
            "tyyppi": "teksti"
          },
          {
            "data": {
              "nimi": {},
              "rows": [
                {
                  "columns": [
                    {
                      "index": 0,
                      "text": {
                        "fi": "Solu"
                      }
                    }
                  ],
                  "index": 0,
                  "isHeader": false
                }
              ]
            },
            "tyyppi": "taulukko"
          }
        ],
        "vahimmaispisteet": 10,
        "valintatapaKoodiUri": "valintatapajono_0#1"
      }
    ]
  },
  "modified": "2019-04-03T13:56",
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Valintaperusteen nimi"
  },
  "onkoJulkinen": false,
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tila": "tallennettu",
  "valintakokeet": [
    {
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>Ohjeet ennakkovalmistautumiseen - fi</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>Ohjeet erityisjärjestelyihin - fi</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa kokeesta - fi</p>"
        }
      },
      "nimi": {
        "fi": "Kokeen nimi - fi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44"
          },
          "jarjestamispaikka": {
            "fi": "Jarjestamispaikka - fi"
          },
          "lisatietoja": {
            "fi": "fi lisatietoja"
          },
          "osoite": {
            "osoite": {
              "fi": "fi osoite"
            },
            "postinumeroKoodiUri": "posti_00350#1"
          }
        }
      ],
      "tyyppiKoodiUri": "tyyppi_1#1"
    }
  ]
};
